--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
       <div class="numbersDiv">
         <button class="number_seven_button button number-btn">
           <img
-            src="/number7.png"
+            src="number7.png"
             alt="Number Seven"
             class="number_seven_img numbers_img number-img"
           />
         </button>
         <button class="number_eight_button button number-btn">
           <img
-            src="/number8.png"
+            src="number8.png"
             alt="number eight"
             class="number_eight_img numbers_img number-img"
           />
         </button>
         <button class="number_nine_button button number-btn">
           <img
-            src="/number9.png"
+            src="number9.png"
             alt="number nine"
             class="number_nine_img numbers_img number-img"
           />
@@ -44,7 +44,7 @@
           data-action="divide"
         >
           <img
-            src="/division.png"
+            src="division.png"
             alt="division sign"
             class="division_img numbers_img img--operator"
             data-action="divide"
@@ -52,21 +52,21 @@
         </button>
         <button class="number_four_button button number-btn">
           <img
-            src="/number4.png"
+            src="number4.png"
             alt="number four"
             class="number_four_img numbers_img number-img"
           />
         </button>
         <button class="number_five_button button number-btn">
           <img
-            src="/number5.png"
+            src="number5.png"
             alt="number five"
             class="number_five_img numbers_img number-img"
           />
         </button>
         <button class="number_six_button button number-btn">
           <img
-            src="/number6.png"
+            src="number6.png"
             alt="number six"
             class="number_six_img numbers_img number-img"
           />
@@ -76,7 +76,7 @@
           data-action="multiply"
         >
           <img
-            src="/multiplication.png"
+            src="multiplication.png"
             alt="multiplication sign"
             class="multiplication_img numbers_img img--operator"
             data-action="multiply"
@@ -84,21 +84,21 @@
         </button>
         <button class="number_one_button button number-btn">
           <img
-            src="/number1.png"
+            src="number1.png"
             alt="Number One"
             class="number_one_img numbers_img number-img"
           />
         </button>
         <button class="number_two_button button number-btn">
           <img
-            src="/number2.png"
+            src="number2.png"
             alt="number two"
             class="number_two_img numbers_img number-img"
           />
         </button>
         <button class="number_three_button button number-btn">
           <img
-            src="/number3.png"
+            src="number3.png"
             alt="number three"
             class="number_three_img numbers_img number-img"
           />
@@ -108,7 +108,7 @@
           data-action="add"
         >
           <img
-            src="/addition.png"
+            src="addition.png"
             alt="addition sign"
             class="addition_img numbers_img img--operator"
             data-action="add"
@@ -116,14 +116,14 @@
         </button>
         <button class="number_zero_button button number-btn">
           <img
-            src="/number0.png"
+            src="number0.png"
             alt="number zero"
             class="number_zero_img numbers_img number-img"
           />
         </button>
         <button class="dot_sign_button button" data-action="decimal">
           <img
-            src="/dotsign.png"
+            src="dotsign.png"
             alt="period sign"
             class="period_img numbers_img number-img"
             data-action="decimal"
@@ -134,7 +134,7 @@
           data-action="calculate"
         >
           <img
-            src="/equalsign.png"
+            src="equalsign.png"
             alt="equal sign"
             class="equal_img numbers_img img--equal"
             data-action="calculate"
@@ -145,7 +145,7 @@
           data-action="subtract"
         >
           <img
-            src="/minus.png"
+            src="minus.png"
             alt="minus sign"
             class="minus_img numbers_img img--operator"
             data-action="subtract"
@@ -153,7 +153,7 @@
         </button>
         <button class="clear_sign_button button" data-action="clear">
           <img
-            src="/clear.png"
+            src="clear.png"
             alt="clear sign"
             class="clear_img numbers_img"
             data-action="clear"
